# dmidiplayer

./: .gitignore  CMakeLists.txt  ChangeLog  README.md  channels.cpp  channels.h  connections.cpp  connections.h  connections.ui  creadmg.sh  dmidiplayer.desktop  dmidiplayer.nsi.in  dmidiplayer.pro  dmidiplayer.rc.in  dmidiplayer_msvc.nsi.in  drumstick-guiplayer.desktop  events.cpp  events.h  framelesswindow.cpp  framelesswindow.h  guiplayer.cpp  guiplayer.h  guiplayer.pro  guiplayer.qrc  guiplayer.ui  helpwindow.cpp  helpwindow.h  iconutils.cpp  iconutils.h  instrumentset.cpp  instrumentset.h  loopdialog.cpp  loopdialog.h  loopdialog.ui  lyrics.cpp  lyrics.h  net.sourceforge.dmidiplayer.appdata.xml  net.sourceforge.dmidiplayer.desktop  net.sourceforge.dmidiplayer.metainfo.xml  pianola.cpp  (+30 more)
.github/workflows/: linux-build.yml
cmake/: DeploymentUtils.cmake  MacOSXBundleInfo.plist.in  PandocMacros.cmake  SCMRevision.cmake  TranslationUtils.cmake  cmake_uninstall.cmake.in  pandoc_manpage.cmake
docs/: CMakeLists.txt  dmidiplayer.1  dmidiplayer.1.md  help.qrc
docs/cs/: index.html  index.md
docs/de/: index.html  index.md
docs/en/: index.html  index.md
docs/es/: index.html  index.md
docs/fr/: index.html  index.md
docs/gl/: index.html  index.md
docs/it/: index.html  index.md
docs/ru/: index.html  index.md
examples/: CMakeLists.txt  Negra_Sombra.kar  Negra_Sombra.rg  README.md  Schubert_Standchen.mid  Schubert_Standchen.rg  examples.lst  haendel_hallelujah.mid  haendel_hallelujah.rg  lindaamiga.mid  lindaamiga.rg  mozart_aveverum.mid  mozart_aveverum.rg  mozart_diesirae.mid  mozart_diesirae.rg  mozart_konigdernacht.mid  mozart_konigdernacht.rg  schubert_avemaria.mid  schubert_avemaria.rg  test.mid  twinkle.kar  twinkle.mma
icons/: CMakeLists.txt  dmidiplayer.icns  dmidiplayer.svgz
translations/: dmidiplayer_cs.ts  dmidiplayer_de.ts  dmidiplayer_en.ts  dmidiplayer_es.ts  dmidiplayer_fr.ts  dmidiplayer_gl.ts  dmidiplayer_it.ts  dmidiplayer_ru.ts
